# sysu-assignments

./: README.md
2025-algorithm-design/lab/01/: main.typ
2025-algorithm-design/lab/01/assets/: main.lua  main.py
2025-algorithm-design/lab/02/: main.typ
2025-algorithm-design/lab/02/assets/: main.py
2025-algorithm-design/lab/03/: main.typ
2025-algorithm-design/lab/03/ai/: prompt.md
2025-algorithm-design/lab/03/assets/: main.py
2025-algorithm-design/lab/07/: main.py
2025-algorithm-design/theory/02/: main.typ
2025-algorithm-design/theory/02/assets/: 2-04.py  2-08.py  2-12.py  2-24.py
2025-algorithm-design/theory/03/: main.typ
2025-algorithm-design/theory/03/assets/: 3-02.py  3-10.py  3-15.py
2025-algorithm-design/theory/04/: main.typ
2025-algorithm-design/theory/05/: main.typ
2025-algorithm-design/theory/05/assets/: 5-02.py  5-07.py  5-09.py
2025-algorithm-design/theory/06/: main.typ
2025-computer-graphics/: .gitignore
2025-computer-graphics/lab/01/ai/: prompt.md
2025-computer-graphics/lab/01/impl/: CMakeLists.txt
2025-computer-graphics/lab/01/impl/src/: main.cpp
2025-computer-graphics/lab/01/report/: main.tex
2025-computer-graphics/lab/02/impl/: CMakeLists.txt
2025-computer-graphics/lab/02/report/: main.typ
2025-computer-graphics/lab/03/ai/: prompt.md
2025-computer-graphics/lab/03/impl/: CMakeLists.txt
2025-computer-graphics/lab/03/impl/src/: main.cpp
2025-computer-graphics/lab/03/report/: main.tex
2025-computer-networks/lab/04/: main.typ
2025-computer-networks/lab/05/: main.typ
2025-computer-networks/lab/06/: main.typ
2025-computer-networks/lab/07/: main.typ
2025-computer-networks/lab/08/: main.typ
2025-computer-networks/lab/09/: main.typ
2025-computer-networks/theory/06/: main.typ
2025-computer-networks/theory/07/: main.typ
2025-cryptography/: .gitignore
2025-cryptography/lab/00/code-3/: Cargo.toml
2025-cryptography/lab/00/code-3/src/: main.rs
2025-cryptography/lab/06/: main.typ
2025-cryptography/lab/06/assets/: check.py
2025-cryptography/lab/06/code-1/: Cargo.toml
2025-cryptography/lab/06/code-1/src/: main.rs
2025-cryptography/lab/07/: main.typ
2025-cryptography/lab/07/code-1/: Cargo.toml
2025-cryptography/lab/07/code-1/ai/: prompt.md  task.md
2025-cryptography/lab/07/code-1/src/: main.rs
2025-cryptography/lab/07/code-2/: Cargo.toml
2025-cryptography/lab/07/code-2/src/: main.rs
2025-cryptography/lab/08/code-1/src/: main.rs
2025-database-system/lab/07/: main.typ
2025-database-system/lab/07/assets/: 1-init.sql  2-insert.sql  2-query-id.sql  2-query-mm.sql  2-query-single.sql  3-create.sql  3-delete.sql  4-create.sql  4-delete.sql  5-create.sql  5-delete.sql
2025-database-system/lab/12/: main.typ
2025-database-system/lab/13/: main.typ
2025-database-system/theory/15/: main.typ
2025-database-system/theory/17/: main.typ
2025-database-system/theory/18/: main.typ
sysu-assignments/: README.md
sysu-assignments/2025-computer-graphics/lab/02/ai/: prompt.md
sysu-assignments/2025-computer-graphics/lab/02/impl/: main.cpp
